--- a/.travis.yml
+++ b/.travis.yml
@@ -6,10 +6,12 @@ rvm:
   - 2.3.0
   - 2.4.0
   - ruby-head
+  - jruby-head
   - rbx-2
 env: COVERAGE=true
 matrix:
   fast_finish: true
   allow_failures:
+    - rvm: jruby-head
     - rvm: ruby-head
     - rvm: "rbx-2"
