--- a/.travis.yml
+++ b/.travis.yml
@@ -1,17 +1,24 @@
 language: ruby
-sudo: false
-rvm:
-  - 2.1.8
-  - 2.2.4
-  - 2.3.0
-  - 2.4.0
-  - ruby-head
-  - jruby-head
-  - rbx-2
-env: COVERAGE=true
+dist: xenial
+cache: bundler
+
+before_install:
+  - gem update --system
+  - gem install bundler
+
 matrix:
-  fast_finish: true
-  allow_failures:
+  include:
+    - rvm: 2.3
+    - rvm: 2.4
+    - rvm: 2.5
+    - rvm: 2.6
+    - rvm: truffleruby
     - rvm: jruby-head
+      env: JRUBY_OPTS="--debug -X+O"
     - rvm: ruby-head
-    - rvm: "rbx-2"
+    - rvm: rbx-3
+  allow_failures:
+    - rvm: ruby-head
+    - rvm: truffleruby
+    - rvm: jruby-head
+    - rvm: rbx-3
