--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,7 @@
 /.bundle/
-/.yardoc
-/Gemfile.lock
-/_yardoc/
-/coverage/
-/doc/
 /pkg/
-/spec/reports/
-/tmp/
-.rspec_status
-.tags
+/gems.locked
+/.covered.db
+/external
+
+.rspec
